[metadata]
name = astropandas
version = attr: astropandas.__version__
author = Jan Luca van den Busch
description = Tools to expand on pandas functionality for astronomical operations.
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv3
repository = https://github.com/jlvdb/astropandas
readme = README.md
classifiers =
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)

[options]
packages = find:
python_requires = >=3.9
install_requires =
    matplotlib
    numpy
    pandas
    scipy
    fitsio
